[gd_scene load_steps=4 format=3 uid="uid://chavunog23u8s"]

[ext_resource type="Script" uid="uid://dq5kbrgkf3yon" path="res://weapons/common/weapon.gd" id="1_swcir"]
[ext_resource type="AudioStream" uid="uid://chqjphffol8w4" path="res://weapons/sounds/pistol_reload.mp3" id="2_8xwfw"]
[ext_resource type="AudioStream" uid="uid://brdruxs4xuq7c" path="res://weapons/sounds/empty.mp3" id="3_3fy1u"]

[node name="Weapon" type="Node2D"]
script = ExtResource("1_swcir")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8xwfw")
volume_db = 12.0

[node name="EmptySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_3fy1u")
volume_db = 20.0

[node name="BulletSpawnPoint" type="Node2D" parent="."]
position = Vector2(115, 56)

[node name="MuzzleFlashPoint" type="Node2D" parent="."]
position = Vector2(133, 55)

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
